@@ -28,6 +28,8 @@
             If a jshardware op is interrupted, report "Interrupted in X" and not "Timeout on X"
             Ensure Ctrl-C/holding button cannot break out of compaction
             Bangle.js: don't compact storage if less than 10% battery
+            Support for Overlays when SPILCD driver used
+            Bangle.js2: Show a message on screen when compacting storage (fix #2391)
             
      2v18 : Fix drawString with setClipRect with 90/270-degree rotation (fix #2343)
             Pico/Wifi: Enabled JIT compiler
